# jurist

./: .env.example  .gitignore  CLAUDE.md  README.md  discussions.md  jurist-context-scope.md  pyproject.toml  secondbrain.md
data/priority_eclis/: huurrecht.txt
docs/: discussions.md
docs/evaluations/: 2026-04-22-m4-e2e-run.md  2026-04-22-m5-hr-audit.md  2026-04-22-m5-suite-post.md  2026-04-22-m5-suite-pre.md
scripts/: audit_hr_coverage.py  dryrun_refilter.py  eval_m4_run.py  eval_suite.py
src/jurist/: __init__.py  config.py  embedding.py  fakes.py  schemas.py  vectorstore.py
tests/: conftest.py  test_config.py  test_fakes.py  test_prompts.py  test_schemas.py
tests/agents/: test_case_retriever.py  test_case_retriever_errors.py  test_case_retriever_tools.py  test_decomposer.py  test_decomposer_huurtype.py  test_fake_case_retriever.py  test_fake_decomposer.py  test_fake_statute_retriever.py  test_fake_synthesizer.py  test_statute_retriever.py  test_statute_retriever_prompt.py  test_statute_retriever_tools.py  test_synthesizer.py  test_synthesizer_grounding.py  test_synthesizer_m5_rules.py  test_synthesizer_refusal.py  test_synthesizer_tools.py  test_validator_stub.py
tests/api/: conftest.py  test_endpoints.py  test_history.py  test_kg_endpoint.py  test_lifespan_m3b.py  test_orchestrator.py  test_sse.py
tests/embedding/: test_embedding.py
tests/eval/: questions.yaml
tests/fixtures/: mock_llm.py  test_mock_llm_rerank.py  test_mock_streaming_client.py
tests/ingest/: test_caselaw.py  test_caselaw_cli.py  test_caselaw_fetch_content.py  test_caselaw_fetch_list.py  test_caselaw_filter.py  test_caselaw_parser.py  test_caselaw_profiles.py  test_fetch.py  test_idempotency.py  test_parser.py  test_priority_eclis.py  test_splitter.py  test_xrefs.py
tests/integration/: test_fake_paths_in_real_kg.py  test_ingest_end_to_end.py  test_m2_statute_retriever_e2e.py  test_m3a_ingestion_e2e.py  test_m3b_case_retriever_e2e.py  test_m4_e2e.py  (+2 more)
web/: index.html  package-lock.json  package.json  tsconfig.json
(+111 files in other folders)
