[project]
name = "jurist"
version = "0.1.0"
description = "Grounded Dutch huurrecht Q&A — multi-agent demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39",
    "fastapi>=0.115",
    "httpx>=0.27",
    "lancedb>=0.13,<1",
    "lxml>=5.3",
    "networkx>=3.3",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "sentence-transformers>=3.0,<4",
    "sse-starlette>=2.1",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jurist"]

[tool.hatch.build.targets.wheel.force-include]
"src/jurist/llm/prompts/statute_retriever.system.md" = "jurist/llm/prompts/statute_retriever.system.md"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
